--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ about_section:
     We are a small company with experienced driving instructors in York who give total quality tuition assuring complete safety for each pupil.
 
     Our aim is not just to teach people to pass a driving test but to teach a skill for life so when they leave us they are a safe and competent driver.
-  image: ''
+  image: '/img/about.jpg'
 
 ---
 <section class="home_banner_area">
