--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ about_section:
     Our aim is not just to teach people to pass a driving test but to teach a skill for life so when they leave us they are a safe and competent driver.
   image: "/img/about.jpg"
 features_section:
-- learner:
+  learner:
     icon: <span class="fas fa-graduation-cap"></span>
     heading: Learn to drive with confidence
     features:
@@ -160,44 +160,8 @@ features_section:
   </div>
 </section>
 
-<section class="feature_area section_gap_top title-bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 col-md-6">
-        <div class="single_feature">
-          <div class="icon"><span class="fas fa-graduation-cap"></span></div>
-          <div class="desc">
-            <h4 class="mt-3 mb-2">Learn to drive with confidence</h4>
-            <ul class="home-features">
-              <li><i class="fas fa-check"></i> Learn to drive in <a href="/driving-lessons-york">York</a></li>
-              <li><i class="fas fa-check"></i> Fully qualified ADI instructors</li>
-              <li><i class="fas fa-check"></i> Pass Plus Available</li>
-              <li><i class="fas fa-check"></i> Flexible around you</li>
-              <li><i class="fas fa-check"></i> NHS discount available</li>
-              <a href="{{site.github.url}}/driving-lessons-york" class="btn btn-secondary">Find out more</a>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6">
-        <div class="single_feature">
-          <div class="icon"><span class="fas fa-car"></span></div>
-          <div class="desc">
-            <h4 class="mt-3 mb-2">Become a Driving Instructor</h4>
-            <ul class="home-features">
-              <li><i class="fas fa-check"></i> Become ADI Qualified</a></li>
-              <li><i class="fas fa-check"></i> One to one tuition</li>
-              <li><i class="fas fa-check"></i> Tailoured to suit you</li>
-              <li><i class="fas fa-check"></i> Set your own hours</li>
-              <li><i class="fas fa-check"></i> Free livery</li>
-              <a href="{{site.github.url}}/become-an-instructor" class="btn btn-secondary">Find out more</a>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include features_section.html %}
+
 <section class="testimonial_area clear-bg section_gap">
   <div class="container">
     <div class="row justify-content-center">
