--- a/lessons-york.html
+++ b/lessons-york.html
@@ -25,24 +25,24 @@ intro_section:
   cta:
     button_link: "/driving-lessons-york/what-you-need"
     button_text: Learn More
-  image: ''
+  image: '/img/passplus-header.jpg'
 offers_section:
   offers:
   - heading: Learn in York and the surrounding area
     text: We now have instructors all around York and the surrounding area.
-    image: ''
+    image: '/img/lessons-2-350x150.jpg'
   - heading: Safe and Calm Environment
     text: We know how nerve wracking it is to learn to drive, so we take care to make
       you as comfortable as possible.
-    image: ''
+    image: '/img/lessons-4-350x150.jpeg'
   - heading: Learn with an ADI Instructor
     text: All of our instructors are ADI certified, approved by the DVSA to the highest
       standard.
-    image: ''
+    image: '/img/lessons-1-350x150.jpg'
   - heading: Available for all Levels of Experience
     text: Just turned 17 and starting out or in need of some refresher lessons, we
       will help you get on the road.
-    image: ''
+    image: '/img/lessons-3-350x150.jpg'
   heading: What do we offer?
   sub_heading: It couldn't be easier to learn with checkmirrors.
 
@@ -50,118 +50,7 @@ offers_section:
 <!-- Page Intro -->
 
 {% include hero.html %}
-<section class="about_area clear-bg section_gap">
-  <div class="container">
-    <div class="row h_blog_item">
-      <div class="col-lg-6">
-        <div class="h_blog_img">
-          <img class="img-fluid" src="{{site.github.url}}/img/passplus-header.jpg" alt="Checkmirrors cars" />
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="mb-9">Learn to drive with <span class="title-a">check</span><span class="title-b">mirrors</span> school of motoring</h2>
-            <p class="mb-9">Looking for driving lessons in {{ page.location }}? Look no further, checkmirrors offer flexible, friendly and professional driving lessons in {{ page.location }} and the surrounding areas.
-
-    Our driving instructors in {{ page.location }} have over 15 years experience, putting you, our pupil first guiding you to success.</p>
-
-            <a class="primary-btn" href="{{ site.github.url }}/driving-lessons-york/what-you-need">
-              Learn More <i class="ti-arrow-right ml-1"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="title-bg py-5">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-12">
-        <div class="text-center my-5">
-          <h2 class="mb-3 text-white">Book from only {{site.pricePerLesson}} per hour or 10 lessons for {{site.priceForTen}}</h2>
-          <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include _lessons/intro_section.html %}
+{% include book-promo-dark.html %}
 <!-- Intro End -->
-<div class="popular_courses clear-bg section_gap_top">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-5">
-        <div class="text-center mb-5">
-          <h2 class="mb-3">What do we offer?</h2>
-          <p>
-            It couldn't be easier to learn with <span>checkmirrors</span>.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <!-- single course -->
-      <div class="col-lg-12">
-        <div class="owl-carousel driving_features">
-          <div class="card">
-            <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-3-350x150.jpg" alt="Picture of a gearstick" />
-            </div>
-            <div class="card-body">
-              <h4 class="mb-3">
-                Available for all Levels of Experience
-              </h4>
-              <p>
-                Just turned 17 and starting out or in need of some refresher lessons, we will help you get on the road.
-              </p>
-
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-2-350x150.jpg" alt="Picture of a toy car" />
-            </div>
-            <div class="card-body">
-              <h4 class="mb-3">
-                Learn in York and the surrounding area
-              </h4>
-              <p>
-                We now have instructors all around York and the surrounding area.
-              </p>
-
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-4-350x150.jpeg" alt="Picture of a road" />
-            </div>
-            <div class="card-body">
-              <h4 class="mb-3">
-                Safe and Calm Environment
-              </h4>
-              <p>
-                We know how nerve wracking it is to learn to drive, so we take care to make you as comfortable as possible.
-              </p>
-
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-top">
-              <img class="img-fluid" src="{{ site.github.url }}/img/lessons-1-350x150.jpg" alt="Picture of the checkmirrors team and cars" />
-            </div>
-            <div class="card-body">
-              <h4 class="mb-3">
-                Learn with an ADI Instructor
-              </h4>
-              <p>
-                All of our instructors are ADI certified, approved by the DVSA to the highest standard.
-              </p>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% include _lessons/offers_section.html %}
