--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -16,28 +16,7 @@ tags:
 ---
 
 {% include hero.html %}
-<div id="fb-root"></div>
-<script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
-<div id="fb-root"></div>
-<script>
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
+
 
 {% include book-promo.html %}
 
@@ -63,7 +42,7 @@ tags:
           <p class="card-text">
             {{ post.date | date_to_long_string }}
           </p>
-          <div class="fb-share-button" data-href="{{ site.github.url }}{{ post.url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+          <a class="btn btn-primary" href="https://www.facebook.com/sharer/sharer.php?u={{ site.github.url }}{{ post.url }}" target="_blank"><i class="fab fa-facebook"></i> Share</a>
         </div>
       </div>
     </div>
