--- a/pass-plus.html
+++ b/pass-plus.html
@@ -69,7 +69,7 @@ tags:
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col">
-        <div class="jumbotron home-jmbo animated fadeInUp">
+        <div class="jumbotron home-jmbo">
           <h2>Entire Pass Plus Course Only {{ site.passPlusPrice }}!</h2>
           <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
           </div>
