--- a/pass-plus.html
+++ b/pass-plus.html
@@ -23,11 +23,11 @@ alumni_section:
       winning!
     image:
       image_alt: 'Kishori Young Passed with checkmirrors '
-      image: ''
+      image: '/img/passpluss1.JPG'
   - title: Toria Leedale
     image:
       image_alt: Toria Leedale passed with checkmirrors
-      image: ''
+      image: '/img/ToriaLeedale.JPG'
     text: Toria passed with checkmirrors and now has a lower insurance premium.
 details_section:
   title: What is Pass Plus?
@@ -48,7 +48,7 @@ details_section:
       a Certificate of Completion.
   image:
     image_alt: PassPlus Logo
-    image: ''
+    image: '/img/pass-plus.png'
 why_passplus_section:
   title: Why PassPlus?
   text: |-
@@ -60,7 +60,6 @@ why_passplus_section:
   image:
     image: "/uploads/passplusimg.JPG"
     image_alt: PassPlus Student with certificate
-
 ---
 <!-- Page Intro -->
 {% include hero.html %}
@@ -70,46 +69,8 @@ why_passplus_section:
 
 <!-- Testimonial -->
 
-<section id="ppTestimonial" class="pt-5 clear-bg">
-  <div class="container">
-    <div class="row text-center text-md-left">
-      <div class="col-sm-12 col-md-6">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <div class="card-img new-rounded">
-              <img src="{{site.github.url}}/img/passpluss1.JPG" alt="Kishori Young with PassPlus">
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Kishori Young</h5>
-              <p class="card-text">Check out Kishori, she earned her PassPlus with checkmirrors and is now winning!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="col-sm-12 col-md-6">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <div class="card-img new-rounded">
-              <img src="{{site.github.url}}/img/ToriaLeedale.JPG" alt="Toria Leedale with PassPlus">
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Toria Leedale</h5>
-              <p class="card-text">Toria passed with checkmirrors and now has a lower insurance premium.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </div>
-</section>
+{% include _passplus/alumni_section.html %}
+
 <section class="passplus-price p-5">
   <div class="container">
     <div class="row justify-content-center text-center">
@@ -122,35 +83,5 @@ why_passplus_section:
       </div>
     </div>
 </section>
-<div class="section_gap registration_area">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-12">
-        <div class="row clock_sec clockdiv" id="clockdiv">
-
-            <h2 class="mb-3">What is Pass Plus?</h2>
-            <p>Pass Plus is a scheme that was introduced to help new drivers who have recently passed improve their attitudes and skills that are essential for 'safe driving for life'.</p>
-
-        </div>
-      </div>
-      </div>
-      <div class="row clock_sec">
-        <div class="col-lg-7">
-        <h3>The Pass Plus syllabus with <span class="title-a">check</span><span class="title-b">mirrors</span></h3>
-        <ul class="home-features">
-          <li>Module 1: Introduction (Part 1)</li>
-          <li>Module 1: Town driving (Part 2)</li>
-          <li>Module 2: All-weather driving</li>
-          <li>Module 3: Out of town driving & rural roads</li>
-          <li>Module 4: Night driving</li>
-          <li>Module 5: Dual carriageways</li>
-          <li>Module 6: Motorways</li>
-        </ul>
-        <p>When you have successfully completed the course, you will be issued with a Certificate of Completion.</p>
-      </div>
-      <div class="col-lg-5">
-        <img src="{{ site.github.url }}/img/pass-plus.png" alt="PassPlus logo">
-        </div>
-    </div>
-  </div>
-</div>
+{% include _passplus/details_section.html %}
+{% include _passplus/why_passplus_section.html %}
