--- a/become-an-instructor.html
+++ b/become-an-instructor.html
@@ -48,147 +48,8 @@ whats_included:
     feature_text: 100% support
   - feature_icon: <i class="fas fa-beer fa-lg"></i>
     feature_text: Team days out
-details_section:
-  title: Some more info
-  text: |-
-    Tellus lectus congue sodales dui ac. Faucibus nulla cubilia vehicula nibh. Et vulputate tortor fermentum odio. Dapibus risus augue tempus laoreet nec in non.
-
-    Tempor hac ex magnis vel. Placerat finibus dapibus sem mollis donec mi. Amet egestas metus proin nostra tempor taciti magnis. Volutpat augue interdum consectetuer auctor dui nulla nisl elit.
-
-    Semper et natoque a ante sem libero lorem. Mollis euismod est blandit quisque massa proin ad libero lacus. Torquent auctor ad commodo ante bibendum aliquam ornare luctus condimentum. Commodo interdum feugiat ligula class.
-  image:
-    image: "/uploads/instructor_clothing.JPG"
-    image_alt: checkmirrors driving instructor's clothing
-
 ---
 {% include hero.html %}
-
-<section class="container mb-4" id="become-check">
-  <div class="row justify-content-center mt-4">
-    <div class="col-lg-12">
-      <div class="text-center my-3">
-        <h2 class="mb-3">Become a Driving Instructor with checkmirrors</h2>
-        <p>
-          Whether you want a career change or you're already qualified the checkmirrors family is currently welcoming new driving instructors to the family in the York area.
-        </p>
-      </div>
-
-    </div>
-    <div class="col-lg-12 justify-content-center">
-      <div class="youtube-video">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/Y0E972YNdCI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="section_gap registration_area">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 col-sm-12">
-          <h3 class="mb-3">What's included:</h3>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-pound-sign fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">Earn up to £40k per year</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-user-tie fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">Be your own boss</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-graduation-cap fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">One to One training in your area</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-thumbs-up fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">No upfront payments, pay as you go</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-file-signature fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">No contract fee or hidden costs</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-car fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">Free livery</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-pencil-ruler fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">Free stationary</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-tshirt fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">Free shirts and fleece</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-phone-volume fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">100% support</h5>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-1 namo">
-              <i class="fas fa-beer fa-lg"></i>
-            </div>
-            <div class="col-xl-10 col-md-11 col-10 namo">
-              <h5 class="mb-3">Team days out</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <div class="register_form">
-            <h3>Get in touch</h3>
-            <p>Kick start your new career now.</p>
-            <form class="form_area" id="instructorForm">
-              <div class="row">
-                <div class="col-lg-12 form_group">
-                  <input class="form-control mb-3" name="name" id="instructName" placeholder="Your Name" type="text" />
-                  <input class="form-control mb-3" name="number" id="instructPhone" placeholder="Your Phone Number" type="tel" />
-                  <input class="form-control mb-3" name="email" id="instructEmail" placeholder="Your Email Address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" type="email" />
-                  <textarea name="comments" class="form-control" id="instructComments" placeholder="Any comments" rows="3"></textarea>
-                </div>
-                <div class="col-lg-12 text-center">
-                  <div id="instructDone"></div>
-                  <button class="primary-btn" type="submit" id="instructorFormSubmit">Submit</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{% include _becomeinstructor/intro_section.html %}
+{% include _becomeinstructor/whats_included_section.html %}
+{% include _becomeinstructor/details_section.html %}
