--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -28,6 +28,17 @@ tags:
       <h2 class="text-center mb-3">Don't just take our word for it!</h2>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-2">
+      <div class="googleReview align-items-center pb-2" id="googleReview">
+        <img class="googleReviewImage" src="{{ site.github.url }}/img/Google-Logo.png" alt="Google Logo">
+        <div class="googleReviewStars">
+          <i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i>
+        </div>
+        <span class="googleReviewScore">{{ site.data.siteData.reviews.google.reviewScore }}</span><span class="googleReviewCount"><a href="{{ site.data.siteData.reviews.google.reviewLink }}" target="_blank"> {{site.data.siteData.reviews.google.reviewCount}} Reviews</a></span>
+      </div>
+    </div>
+  </div>
   <div class="row mt-3 mb-3">
     {% for post in site.posts %}
 
