--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -33,7 +33,7 @@ tags:
       <div class="googleReview align-items-center pb-2" id="googleReview">
         <img class="googleReviewImage" src="{{ site.github.url }}/img/Google-Logo.png" alt="Google Logo">
         <div class="googleReviewStars">
-          <i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i>
+          <i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><span class="starBack"></span>
         </div>
         <span class="googleReviewScore">{{ site.data.siteData.reviews.google.reviewScore }}</span><span class="googleReviewCount"><a href="{{ site.data.siteData.reviews.google.reviewLink }}" target="_blank"> {{site.data.siteData.reviews.google.reviewCount}} Reviews</a></span>
       </div>
@@ -63,3 +63,4 @@ tags:
   </div>
 </div>
 </section>
+{% include review-structured-data.html %}
