--- a/pass-plus.html
+++ b/pass-plus.html
@@ -70,18 +70,6 @@ why_passplus_section:
 <!-- Testimonial -->
 
 {% include _passplus/alumni_section.html %}
-
-<section class="passplus-price p-5">
-  <div class="container">
-    <div class="row justify-content-center text-center">
-      <div class="col">
-        <div class="jumbotron home-jmbo">
-          <h2>Entire Pass Plus Course Only {{ site.passPlusPrice }}!</h2>
-          <button class="btn btn-primary btn-lg btn-responsive" data-toggle="modal" data-target="#bookFormModal">Book Now</button>
-          </div>
-        </div>
-      </div>
-    </div>
-</section>
+{% include _passplus/passplus_promo.html %}
 {% include _passplus/details_section.html %}
 {% include _passplus/why_passplus_section.html %}
