--- a/testimonials-17.html
+++ b/testimonials-17.html
@@ -30,19 +30,22 @@ tags:
   </div>
   <div class="row justify-content-center">
     <div class="col-12 col-md-2">
+      <a href="{{ site.data.siteData.reviews.google.reviewLink }}" target="_blank">
       <div class="googleReview align-items-center pb-2" id="googleReview">
         <img class="googleReviewImage" src="{{ site.github.url }}/img/Google-Logo.png" alt="Google Logo">
         <div class="googleReviewStars">
           <i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><i class="fas fa-star fa-sm"></i><span class="starBack"></span>
         </div>
-        <span class="googleReviewScore">{{ site.data.siteData.reviews.google.reviewScore }}</span><span class="googleReviewCount"><a href="{{ site.data.siteData.reviews.google.reviewLink }}" target="_blank"> {{site.data.siteData.reviews.google.reviewCount}} Reviews</a></span>
+        <span class="googleReviewScore">{{ site.data.siteData.reviews.google.reviewScore }}</span><span class="googleReviewCount"> {{site.data.siteData.reviews.google.reviewCount}} Reviews</span>
       </div>
+      </a>
     </div>
   </div>
   <div class="row mt-3 mb-3">
     {% for post in site.posts %}
 
-    <div class="col-md-4 col-xs-12">
+    <div class="col-xs-12 col-md-4">
+      <a href="{{ site.github.url }}{{ post.url }}">
       <div class="card testimonial-card mt-3">
         <div class="card-img-top">
           <img src="{{ post.image }}" alt="{{post.title}}">
@@ -55,6 +58,7 @@ tags:
           <a class="btn btn-primary" href="https://www.facebook.com/sharer/sharer.php?u={{ site.github.url }}{{ post.url }}" target="_blank"><i class="fab fa-facebook"></i> Share</a>
         </div>
       </div>
+      </a>
     </div>
 
     {% endfor %}
